  https://github.com/astropy/astropy/pull/1871
  To disable PyFITS deprecation warnings in scripts one may call
  ``pyfits.ignore_deprecation_warnings()`` after importing PyFITS.

- ``Card`` objects have a new ``is_blank`` attribute which returns ``True`` if
  the card represents a blank card (no keyword, value, or comment) and
  ``False`` otherwise.


3.2.5 (unreleased)
------------------

- Nothing changed yet.


3.1.7 (unreleased)
------------------

- Nothing changed yet.


3.2.4 (2014-06-02)
------------------

- Fixed a regression where multiple consecutive calls of the ``writeto``
  method on the same HDU but to different files could lead to corrupt data or
  crashes on the subsequent calls after the first. (spacetelescope/PyFITS#40)


3.2.3 (2014-05-14)
------------------

- Nominal support for Python 3.4.

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with
  tables containing array columns (columns in which each element is an array
  instead of a single scalar value). (spacetelescope/PyFITS#22)

- Fixed an issue where PyFITS allowed newline characters in header values and
  comments. (spacetelescope/PyFITS#51)

- Fixed pickling of ``FITS_rec`` (table data) objects.
  (spacetelescope/PyFITS#53)

- Improved behavior when writing large compressed images on OSX by removing an
  unncessary check for platform architecture. (spacetelescope/PyFITS#57)

- Allow reading FITS files from file-like objects that do not have a
  ``.closed`` attribute (and as such may not even have an "open" vs. "closed"
  concept). (spacetelescope/PyFITS#56)

- Fixed duplicate insertion of commentary keywords on compressed image
  headers. (spacetelescope/PyFITS#58)

- Fixed minor issue with comparison of header commentary card values.
  (spacetelescope/PyFITS#59)


3.1.6 (2014-05-14)
------------------

- Nominal support for Python 3.4.

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with