@@ -747,13 +747,16 @@ class CompImageHDU(BinTableHDU):
         # heuristic used by CFITSIO, so this should give consistent results.
         # And the cases where this heuristic is insufficient are extreme and
         # almost entirely contrived corner cases, so it will do for now
-        huge_hdu = self.data.nbytes > 2 ** 32
+        if self._has_data:
+            huge_hdu = self.data.nbytes > 2 ** 32
 
-        if huge_hdu and not CFITSIO_SUPPORTS_Q_FORMAT:
-            raise IOError(
-                "PyFITS cannot compress images greater than 4 GB in size "
-                "(%s is %s bytes) without CFITSIO >= 3.35" %
-                ((self.name, self.ver), self.data.nbytes))
+            if huge_hdu and not CFITSIO_SUPPORTS_Q_FORMAT:
+                raise IOError(
+                    "PyFITS cannot compress images greater than 4 GB in size "
+                    "(%s is %s bytes) without CFITSIO >= 3.35" %
+                    ((self.name, self.ver), self.data.nbytes))
+        else:
+            huge_hdu = False
 
         # Update the extension name in the table header
         if not name and not 'EXTNAME' in self._header:
@@ -1046,7 +1049,7 @@ class CompImageHDU(BinTableHDU):
 
         # Calculate the number of rows in the output table and
         # write the ZNAXISn and ZTILEn cards to the table header.
-        nrows = 1
+        nrows = 0
 
         for idx, axis in enumerate(self._axes):
             naxis = 'NAXIS' + str(idx + 1)
@@ -1066,7 +1069,10 @@ class CompImageHDU(BinTableHDU):
                     ts = self._header[ztile]
                 tile_size.append(ts)
 
-            nrows = nrows * ((axis - 1) // ts + 1)
+            if not nrows:
+                nrows = (axis - 1) // ts + 1
+            else:
+                nrows *= ((axis - 1) // ts + 1)
 
             if image_header and naxis in image_header:
                 self._header.set(znaxis, axis, image_header.comments[naxis],
@@ -1348,6 +1354,9 @@ class CompImageHDU(BinTableHDU):
     def data(self):
         # The data attribute is the image data (not the table data).
         data = compression.decompress_hdu(self)
+
+        if data is None:
+            return data
 
         # Scale the data if necessary
         if (self._orig_bzero != 0 or self._orig_bscale != 1):
